@@ -49,6 +49,7 @@ int main(int argc, char** argv)
     << get_defs(CLUTTER_TYPE_EFFECT)
     << get_defs(CLUTTER_TYPE_EVENT)
     << get_defs(CLUTTER_TYPE_FIXED_LAYOUT)
+    << get_defs(CLUTTER_TYPE_FLOW_LAYOUT)
     << get_defs(CLUTTER_TYPE_GROUP)
     << get_defs(CLUTTER_TYPE_INTERVAL)
 //    << get_defs(CLUTTER_TYPE_HBOX)
